--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "sass": "^1.57.0"
+    "react-helmet": "^6.1.0"
   },
   "repository": {
     "type": "git",
