--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-remark-images": "^7.3.1",
+    "gatsby-remark-katex": "^7.4.0",
     "gatsby-remark-prismjs": "^7.3.0",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-remark": "^6.3.1",
+    "katex": "^0.13.24",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
