--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^5.3.2",
     "gatsby-plugin-react-helmet": "^6.3.0",
     "gatsby-plugin-s3": "^0.3.8",
+    "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-remark-images": "^7.3.1",
     "gatsby-remark-katex": "^7.4.0",
@@ -28,7 +29,8 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.62.0"
   },
   "repository": {
     "type": "git",
