--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-remark-prismjs": "^7.3.0",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-remark": "^6.3.1",
+    "gatsby-transformer-sharp": "^5.9.0",
     "katex": "^0.13.24",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
