--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "chart.js": "^4.3.0",
     "gatsby": "^5.3.2",
     "gatsby-plugin-react-helmet": "^6.3.0",
     "gatsby-plugin-s3": "^0.3.8",
@@ -29,8 +30,10 @@
     "katex": "^0.13.24",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-loading-icons": "^1.1.0",
     "sass": "^1.62.0"
   },
   "repository": {
