--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-remark": "^6.3.1",
     "gatsby-transformer-sharp": "^5.9.0",
     "katex": "^0.13.24",
+    "lodash": "^4.17.21",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
