--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "start:lambdas": "./scripts/start_lambdas.sh",
+    "start:prod": "NODE_ENV=production gatsby serve --port 8001 --host 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "deploy": "gatsby-plugin-s3 deploy --yes; aws cloudfront create-invalidation --distribution-id E26F4V6JLBB7PL --paths '/*';",
