--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "Systems Obscure",
+  "name": "systems-obscure",
   "private": true,
   "description": "Personal blog of software engineer Thomas Bishop",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
+    "start:dev": "gatsby develop",
+    "start:prod": "npm run build && NODE_ENV=production gatsby serve --port 8001 --host 0.0.0.0",
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
     "start:lambdas": "./scripts/start_lambdas.sh",
-    "start:prod": "NODE_ENV=production gatsby serve --port 8001 --host 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "deploy": "gatsby-plugin-s3 deploy --yes; aws cloudfront create-invalidation --distribution-id E26F4V6JLBB7PL --paths '/*';",
