--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-remark-images": "^7.3.1",
     "gatsby-remark-katex": "^7.4.0",
+    "gatsby-remark-mermaid": "^4.0.0",
     "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^7.3.0",
     "gatsby-source-filesystem": "^5.3.1",
-    "gatsby-transformer-remark": "^6.3.1",
+    "gatsby-transformer-remark": "^6.12.0",
     "gatsby-transformer-sharp": "^5.9.0",
     "katex": "^0.13.24",
     "lodash": "^4.17.21",
