--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.3.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-react-helmet": "^6.3.0",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.21",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
