--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   },
   "dependencies": {
     "@visx/axis": "^3.10.1",
+    "@visx/bounds": "^3.3.0",
+    "@visx/event": "^3.3.0",
     "@visx/group": "^3.3.0",
     "@visx/pattern": "^3.3.0",
+    "@visx/responsive": "^3.10.2",
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
+    "@visx/tooltip": "^3.3.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.3.0",
     "gatsby": "^5.11.0",
