--- a/package.json
+++ b/package.json
@@ -23,25 +23,21 @@
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
     "@visx/tooltip": "^3.3.0",
-    "gatsby": "^5.11.0",
-    "gatsby-plugin-react-helmet": "^6.3.0",
+    "axios": "^1.7.2",
+    "gatsby": "^5.13.0",
     "gatsby-plugin-s3": "^0.4.1",
-    "gatsby-plugin-sass": "^6.9.0",
-    "gatsby-plugin-sharp": "^5.3.2",
-    "gatsby-remark-images": "^7.3.1",
-    "gatsby-remark-katex": "^7.4.0",
-    "gatsby-remark-mermaid": "^4.0.0",
-    "gatsby-remark-numbered-footnotes": "^1.0.1",
-    "gatsby-remark-prismjs": "^7.3.0",
-    "gatsby-source-filesystem": "^5.3.1",
-    "gatsby-transformer-remark": "^6.12.0",
-    "gatsby-transformer-sharp": "^5.9.0",
-    "katex": "^0.13.24",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-katex": "^7.13.1",
+    "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "node-sass": "^9.0.0",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "sass": "^1.62.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "repository": {
     "type": "git",
