--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-remark-images": "^7.13.1",
     "gatsby-remark-katex": "^7.13.1",
     "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-remark-static-images": "^1.2.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
