--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "node-sass": "^9.0.0",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-select": "^5.8.0"
   },
   "repository": {
     "type": "git",
